customerAPI/1.0.0/0559c7e8e81875dde9df64d8217eda2826306cda-production-httproute-1.yaml
---
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "0559c7e8e81875dde9df64d8217eda2826306cda-production-httproute-1"
spec:
  hostnames:
    - "default.gw.wso2.com"
  rules:
    - matches:
        - path:
            type: "RegularExpression"
            value: "/greeting"
          method: "GET"
      backendRefs:
        - group: "dp.wso2.com"
          kind: "Backend"
          name: "backend-7b1442c83692c160f3aa2f25414cfee823393c1d-api"
  parentRefs:
    - group: "gateway.networking.k8s.io"
      kind: "Gateway"
      name: "default"
      sectionName: "httpslistener"
