customerAPI/1.0.0/routes.yaml
---
apiVersion: "gateway.networking.k8s.io/v1beta1"
kind: "HTTPRoute"
metadata:
  name: "0559c7e8e81875dde9df64d8217eda2826306cda-production-httproute-1"
spec:
  hostnames:
    - "dev.gw.wso2.com"
